# architecture-patterns-with-python

./: Dockerfile  Makefile  README.md  docker-compose.yml  docker.ini  pyproject.toml
scripts/: check_formatting.sh  format_code.sh
src/api/: app.py  cli.py  injector.py
src/api/trading_asset/: __init__.py  router.py  trading_asset.py
src/base/: __init__.py  command_bus.py  config.py  consumer.py  event_bus.py  module.py
src/base/adapters/: event_publisher.py
src/base/ports/: event_publisher.py
src/cache/: module.py
src/cache/adapters/: repositories.py
src/cache/consumers/: trading_assets_cache.py
src/cache/listeners/: trading_asset_added.py  trading_asset_updated.py
src/cache/ports/: repositories.py
src/cache/services/: update_trading_asset.py
src/database/: env.py
src/database/models/: __init__.py  base.py  trading_assets.py
src/database/versions/: 23149751dcbe_add_trading_assets_commands_log.py  56dcda0e1ea6_initial_migration.py
src/mailing/: module.py
src/mailing/adapters/: notifications.py
src/mailing/consumers/: customer_care_notifications.py
src/mailing/listeners/: trading_asset_added.py
src/mailing/ports/: notifications.py
src/trading_assets/: commands.py  events.py  module.py
src/trading_assets/adapters/: __init__.py  uow.py
src/trading_assets/command_handlers/: add_trading_asset.py  update_trading_asset.py
src/trading_assets/consumers/: trading_assets_commands_log.py
tests/: conftest.py  postman_collection.json
tests/integration/: test_repositories.py
tests/unit/: test_aggregates.py
(+14 files in other folders)
